Fixed appearance of weather using z-index and .weather class in css, and correcting displayWeather and fadeWeather functions

--- a/V1_master/main.css
+++ b/V1_master/main.css
@@ -257,27 +257,34 @@ td img {
 	min-height: auto;
 	max-width: 48%;
 	position: relative;
+
 }
+
 
 #farm { /*using default_background_medium.png. formerly background image within choice_screen*/
 	width: 100%;
+	position: relative;
 	z-index: 1;
 	margin: 0 auto;
 	padding: 0;
 	}
+
 	/*NOTE: medium-sized default image file width =600px! Original default image width=700 */
 
+.weather {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 3;
+	width: 100%;
+}
 
 .hidden {
 	display: none;
 }
 
 .displayWeather { /*Class added to show weather outcome*/
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: inline;
-	z-index: 3;
+	display: inline-block;
 }
 
 
@@ -387,6 +394,7 @@ input#grow {
 	border-radius: 3px;
 	padding: 5px 10px;
 	font-size: 18px;
+	z-index: 2;
 	/*-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);*/
     /*box-shadow: inset 0 2px 0 rgba(255, 255, 255, 0.4), 0 2px 2px rgba(0, 0, 0, 0.2);*/
